wip hmtl sections

--- a/index.html
+++ b/index.html
@@ -52,8 +52,166 @@
   </nav>
   <main class="main ">
 
+    <!-- about -->
+    <section class="about">
 
+      <p class="slogan purple-text fw-bold text-center mb-2">Who Are We</p>
+      <h2 class="primary-text text-center about__title">About Midligner</h2>
+    </section>
 
+    <section class="work-flow text-center">
+
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-10">
+            <h2 class="work-flow__title violet-text mb-5">Midligner fully digital work flow</h2>
+            <div class="work-flow__image-container">
+              <img class="w-100" src="./images/work-flow.png" alt="work-flow">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="advantages">
+      <h2 class="primary-text text-center advantages__title">Our Advantages</h2>
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="advantages__icon-container">
+              <img src="./images/safty.svg" alt="safty">
+            </div>
+            <div class="advantages__content">
+              <p class="violet-text">
+                Extra Safety
+              </p>
+              <p class="gray-text">
+                Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
+              </p>
+
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="advantages__icon-container">
+              <img src="./images/perfect-fit.svg" alt="perfect-fit">
+            </div>
+            <div class="advantages__content">
+
+              <p class="violet-text">
+                Perfect fit
+              </p>
+              <p class="gray-text">
+                Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="advantages__icon-container">
+              <img src="./images/crystal-clear.svg" alt="crystal-clear">
+            </div>
+            <div class="advantages__content">
+              <p class="violet-text">
+                Crystal Clear
+              </p>
+              <p class="gray-text">
+                Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
+              </p>
+
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="advantages__icon-container">
+              <img src="./images/fast-results.svg" alt="fast-results">
+            </div>
+            <div class="advantages__content">
+              <p class="violet-text">
+                Fast Results
+              </p>
+              <p class="gray-text">
+                Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="products-and-kit">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-10">
+            <p class="slogan purple-text fw-bold text-center mb-2">Product and Kit</p>
+            <h2 class="primary-text text-center products-and-kit__title mb-5">Our kit comes with</h2>
+            <div class="products-and-kit__image-container">
+              <img class="w-100" src="./images/products-and-kit.png" alt="products-and-kit">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="our-workflow">
+      <div class="container">
+        <p class="slogan purple-text fw-bold text-center mb-2">Our Workflow</p>
+        <h2 class="primary-text text-center products-and-kit__title mb-5">Let’s Start with Midligner</h2>
+        <div class="our-workflow__wrapper">
+          <div class="card card--odd">
+            <div class="row align-items-center flex-column-reverse flex-lg-row">
+              <div class="col-12 col-lg-6">
+                <h3 class="card__heading violet-text">Consultation with a Dentist</h3>
+                <p class="card__content gray-text">Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus
+                  nullamamet
+                  consectetur. Et turpis
+                  tristique cursus nullam.</p>
+              </div>
+              <div class="col-12 col-lg-6">
+                <div class="card__image text-center text-lg-end mb-4 mb-lg-0">
+                  <img class="" src="./images/consultation-with-a-dentist.png" alt="consultation-with-a-dentist">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card card--even">
+            <div class="row align-items-center justify-content-between">
+              <div class="col-12 col-lg-6">
+                <div class="card__image text-center text-lg-start mb-4 mb-lg-0">
+                  <img class="" src="./images/consultation-with-a-dentist.png" alt="consultation-with-a-dentist">
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <h3 class="card__heading violet-text">Upload Patient’s Documents</h3>
+                <p class="card__content gray-text">Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus
+                  nullamamet
+                  consectetur. Et turpis
+                  tristique cursus nullam.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card card--odd">
+            <div class="row align-items-center flex-column-reverse flex-lg-row">
+              <div class="col-12 col-lg-6">
+                <h3 class="card__heading violet-text">3D Simulation</h3>
+                <p class="card__content gray-text">Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus
+                  nullamamet
+                  consectetur. Et turpis
+                  tristique cursus nullam.</p>
+              </div>
+              <div class="col-12 col-lg-6">
+                <div class="card__image text-center text-lg-end mb-4 mb-lg-0">
+                  <img class="" src="./images/3d-Simulation.png" alt="3d-Simulation">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
   </main>
 
