--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
               </div>
             </div>
           </div>
+
           <div class="card card--even">
             <div class="row align-items-center justify-content-between">
               <div class="col-12 col-lg-6">
@@ -208,9 +209,248 @@
             </div>
           </div>
 
+          <div class="card card--even">
+            <div class="row align-items-center justify-content-between">
+              <div class="col-12 col-lg-6">
+                <div class="card__image text-center text-lg-start mb-4 mb-lg-0">
+                  <img class="" src="./images/production.png" alt="production">
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <h3 class="card__heading violet-text">Production</h3>
+                <p class="card__content gray-text">Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus
+                  nullamamet
+                  consectetur. Et turpis
+                  tristique cursus nullam.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="card card--odd">
+            <div class="row align-items-center flex-column-reverse flex-lg-row">
+              <div class="col-12 col-lg-6">
+                <h3 class="card__heading violet-text">Delivery</h3>
+                <p class="card__content gray-text">Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus
+                  nullamamet
+                  consectetur. Et turpis
+                  tristique cursus nullam.</p>
+              </div>
+              <div class="col-12 col-lg-6">
+                <div class="card__image text-center text-lg-end mb-4 mb-lg-0">
+                  <img class="" src="./images/delivery.png" alt="delivery">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
+    </section>
+
+    <section class="testimonials">
+      <!-- <div class="container"> -->
+      <h2 class="primary-text text-center testimonials__title mb-5">Our Happy Cases</h2>
+      <!-- </div> -->
+
+      <div class="container">
+        <div class="slider">
+          <div class="card">
+            <div class="row align-items-center">
+              <div class="col-12 col-lg-6">
+                <!-- Content on the left -->
+                <div class="card-body">
+                  <blockquote class="card__quote mb-6">Love the simplicity of the service and the prompt customer
+                    support.
+                    We can’t
+                    imagine working without it.</blockquote>
+                  <div class="author">
+                    <p class="author__name mb-1">
+                      — Renee Wells
+                    </p>
+                    <p class="author__problem">
+                      Had Spacing in her teeth
+                    </p>
+                  </div>
+                  <!-- <h5 class="card-title">Card Title 1</h5> -->
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <!-- Image on the right -->
+                <img src="./images/testimonials.png" class="card-img w-100" alt="testimonials">
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="row align-items-center">
+              <div class="col-12 col-lg-6">
+                <!-- Content on the left -->
+                <div class="card-body">
+                  <blockquote class="card__quote mb-6">Love the simplicity of the service and the prompt customer
+                    support.
+                    We can’t
+                    imagine working without it.</blockquote>
+                  <div class="author">
+                    <p class="author__name mb-1">
+                      — Renee Wells
+                    </p>
+                    <p class="author__problem">
+                      Had Spacing in her teeth
+                    </p>
+                  </div>
+                  <!-- <h5 class="card-title">Card Title 1</h5> -->
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <!-- Image on the right -->
+                <img src="./images/testimonials.png" class="card-img w-100" alt="testimonials">
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="row align-items-center">
+              <div class="col-12 col-lg-6">
+                <!-- Content on the left -->
+                <div class="card-body">
+                  <blockquote class="card__quote mb-6">Love the simplicity of the service and the prompt customer
+                    support.
+                    We can’t
+                    imagine working without it.</blockquote>
+                  <div class="author">
+                    <p class="author__name mb-1">
+                      — Renee Wells
+                    </p>
+                    <p class="author__problem">
+                      Had Spacing in her teeth
+                    </p>
+                  </div>
+                  <!-- <h5 class="card-title">Card Title 1</h5> -->
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <!-- Image on the right -->
+                <img src="./images/testimonials.png" class="card-img w-100" alt="testimonials">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="custom-arrows">
+          <button class="prev-arrow">
+            <img src="./images/slider-arrow.svg" alt="">
+          </button>
+          <button class="next-arrow">
+            <img src="./images/slider-arrow.svg" alt="">
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="faq">
+      <div class="container">
+
+        <h2 class="primary-text testimonials__title mb-5">Frequently Asked Questions</h2>
+        <div class="faq__wrapper">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq1">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="faq1"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq2">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="faq2"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq3">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="faq3"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq4">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="faq4"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq5">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="faq5"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="faq6">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  Dental Veneers: Pros And Cons?
+                </button>
+              </h2>
+              <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="faq6"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat aute irure dolor
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </section>
 
   </main>
