--- a/index.html
+++ b/index.html
@@ -453,6 +453,93 @@
       </div>
     </section>
 
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <a href="#">
+              <img class="footer__logo" src="./images/footer-logo.png" alt="footer-logo">
+            </a>
+
+            <p class="white-text footer__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+              nunc ante velit
+              vitae. Est tellus vitae,
+              nullam lobortis enim.</p>
+
+            <div class="footer__social-icons">
+              <ul class="d-flex">
+                <li>
+                  <a href="#" target="_blank">
+                    <img src="./images/instagram-fill.svg" alt="instagram">
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <img src="./images/facebook-fill.svg" alt="facebook">
+                  </a>
+
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <img src="./images/twitter-fill.svg" alt="twitter">
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank">
+                    <img src="./images/youtube-fill.svg" alt="youtube">
+                  </a>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <h5 class="white-text mb-4">
+              QUICK LINKS
+            </h5>
+
+            <ul class="footer__quick-links">
+              <li>
+                <a href="#" class="white-text">About</a>
+              </li>
+              <li>
+                <a href="#" class="white-text">Features</a>
+              </li>
+              <li>
+                <a href="#" class="white-text">Screenshot</a>
+              </li>
+              <li>
+                <a href="#" class="white-text">Blog</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-12 col-md-4 news-letter">
+            <h5 class="news-letter__title white-text mb-4">
+              NEWS LETTERS
+            </h5>
+
+
+            <p class="white-text news-letter__content">Subscribe our newsletter to get our latest
+              update & news</p>
+
+            <form class="text-center subscribe-input d-flex justify-content-between align-items-center my-3" action="">
+              <input class="w-100" type="email" required placeholder="Your email address">
+              <button>
+                <img src="./images/send.svg" alt="send">
+              </button>
+            </form>
+          </div>
+
+        </div>
+        <div class="sub-footer">
+          <p class="white-text text-center sub-footer__copy-rights">
+            &copy; Copyright 2023 .Midligner. All Right Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+
   </main>
 
 
