--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta property="og:title" content="Manal Negmeldin">
-  <meta property="og:description" content="Manal Negmeldin Official website">
-  <meta property="og:image" content="./images/thumbnail-manal-negmeldin.png">
-  <meta property="og:url" content="https://manal-negmeldin.com/">
-  <meta property="og:type" content="website"> -->
   <title>Midligner</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -51,6 +46,59 @@
     </div>
   </nav>
   <main class="main ">
+
+    <!-- slider  -->
+
+    <section class="top-slider">
+      <div class="container">
+        <div class="main-slider">
+          <div class="slide1">
+            <div class="row py-5 align-items-center justify-content-between">
+              <div class="col-12 col-lg-6">
+                <h1 class="primary-text top-slider__title">The easiest with or without a dentist</h1>
+                <p class="gray-text top-slider__content">With mid.ligner you will find the perfect braces tailored
+                  perfectly for you</p>
+                <button type="button" class="top-slider__contact-us btn btn-primary btn-lg">Contact Us</button>
+
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="top-slider__image">
+                  <img src="./images/joyful.png" class="" alt="joyful">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slide1">
+            <div class="row py-5 align-items-center justify-content-between">
+              <div class="col-12 col-lg-6">
+                <h1 class="primary-text top-slider__title">The easiest with or without a dentist</h1>
+                <p class="gray-text top-slider__content">With mid.ligner you will find the perfect braces tailored
+                  perfectly for you</p>
+                <button type="button" class="top-slider__contact-us btn btn-primary btn-lg">Contact Us</button>
+
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="top-slider__image">
+                  <img src="./images/joyful.png" class="" alt="joyful">
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="custom-arrows">
+          <button class="main-prev-arrow">
+            <img src="./images/slider-arrow.svg" alt="">
+          </button>
+          <button class="main-next-arrow">
+            <img src="./images/slider-arrow.svg" alt="">
+          </button>
+        </div>
+      </div>
+      </div>
+    </section>
 
     <!-- about -->
     <section class="about">
