--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
 
       <p class="slogan purple-text fw-bold text-center mb-2">Who Are We</p>
       <h2 class="primary-text text-center about__title">About Midligner</h2>
+
+      <div class="container">
+
+        <div class="about__video-container">
+          <img src="./images/play-video.png" alt="Video Thumbnail" class="w-100" onclick="playVideo()" />
+          <video id="videoPlayer" controls>
+            <source src="video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+
+
     </section>
 
     <section class="work-flow text-center">
