fix advanteges header

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
               <img src="./images/safty.svg" alt="safty">
             </div>
             <div class="advantages__content">
-              <p class="violet-text">
+              <h5 class="advantages__header violet-text">
                 Extra Safety
-              </p>
+              </h5>
               <p class="gray-text">
                 Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
               </p>
@@ -159,9 +159,9 @@
             </div>
             <div class="advantages__content">
 
-              <p class="violet-text">
+              <h5 class="advantages__header violet-text">
                 Perfect fit
-              </p>
+              </h5>
               <p class="gray-text">
                 Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
               </p>
@@ -172,9 +172,9 @@
               <img src="./images/crystal-clear.svg" alt="crystal-clear">
             </div>
             <div class="advantages__content">
-              <p class="violet-text">
+              <h5 class="advantages__header violet-text">
                 Crystal Clear
-              </p>
+              </h5>
               <p class="gray-text">
                 Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
               </p>
@@ -187,9 +187,9 @@
               <img src="./images/fast-results.svg" alt="fast-results">
             </div>
             <div class="advantages__content">
-              <p class="violet-text">
+              <h5 class="advantages__header violet-text">
                 Fast Results
-              </p>
+              </h5>
               <p class="gray-text">
                 Lorem ipsum dolor sit amet consectetur. Et turpis tristique cursus nullam.
               </p>
