--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="slide1">
             <div class="row py-5 align-items-center justify-content-between">
               <div class="col-12 col-lg-6">
-                <h1 class="primary-text top-slider__title">The easiest with or without a dentist</h1>
+                <h1 class="primary-text top-slider__title">We achieve beyond your mind believes</h1>
                 <p class="gray-text top-slider__content">With mid.ligner you will find the perfect braces tailored
                   perfectly for you</p>
                 <button type="button" class="top-slider__contact-us btn btn-primary btn-lg">Contact Us</button>
@@ -63,13 +63,13 @@
               </div>
               <div class="col-12 col-lg-4">
                 <div class="top-slider__image">
-                  <img src="./images/joyful.png" class="" alt="joyful">
+                  <img src="./images/slider1.png" class="" alt="slider1">
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="slide1">
+          <div class="slide2">
             <div class="row py-5 align-items-center justify-content-between">
               <div class="col-12 col-lg-6">
                 <h1 class="primary-text top-slider__title">The easiest with or without a dentist</h1>
@@ -80,8 +80,44 @@
               </div>
               <div class="col-12 col-lg-4">
                 <div class="top-slider__image">
-                  <img src="./images/joyful.png" class="" alt="joyful">
+                  <img src="./images/slider2.png" class="" alt="slider2">
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slide3">
+            <div class="row py-5 align-items-center justify-content-between">
+              <div class="col-12 col-lg-4">
+                <div class="top-slider__image">
+                  <img src="./images/slider3.png" class="" alt="slider3">
+                </div>
+              </div>
+
+              <div class="col-12 col-lg-6">
+                <h1 class="primary-text top-slider__title">Embrace Your Smile with Our Aligners</h1>
+                <!-- <p class="gray-text top-slider__content">With mid.ligner you will find the perfect braces tailored
+                  perfectly for you</p> -->
+                <button type="button" class="top-slider__contact-us btn btn-primary btn-lg">Let’s Start</button>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="slide4">
+            <div class="row py-5 align-items-center justify-content-between">
+              <div class="col-12 col-lg-4">
+                <div class="top-slider__image">
+                  <img src="./images/slider4.png" class="" alt="slider4">
+                </div>
+              </div>
+
+              <div class="col-12 col-lg-6">
+                <h1 class="primary-text top-slider__title">Your Perfect Smile Even Better</h1>
+                <!-- <p class="gray-text top-slider__content">With mid.ligner you will find the perfect braces tailored
+                  perfectly for you</p> -->
+                <button type="button" class="top-slider__contact-us btn btn-primary btn-lg">Contact Us</button>
+
               </div>
             </div>
           </div>
