edit other sections

--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
     <section class="advantages">
       <h2 class="primary-text text-center advantages__title">Our Advantages</h2>
       <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6 ">
+            <div class="advantages__img-container">
+              <img src="./images/our-advantage.png" class="w-100" alt="our-advantage">
+            </div>
+          </div>
+        </div>
         <div class="row text-center">
           <div class="col-12 col-md-6 col-lg-3">
             <div class="advantages__icon-container">
@@ -240,9 +247,9 @@
         <div class="row justify-content-center">
           <div class="col-12 col-lg-10">
             <p class="slogan purple-text fw-bold text-center mb-2">Product and Kit</p>
-            <h2 class="primary-text text-center products-and-kit__title mb-5">Our kit comes with</h2>
+            <h2 class="primary-text text-center products-and-kit__title mb-5">Let's set in one kit</h2>
             <div class="products-and-kit__image-container">
-              <img class="w-100" src="./images/products-and-kit.png" alt="products-and-kit">
+              <img class="w-100" src="./images/products-and-kit2.png" alt="products-and-kit">
             </div>
           </div>
         </div>
@@ -276,7 +283,7 @@
             <div class="row align-items-center justify-content-between">
               <div class="col-12 col-lg-6">
                 <div class="card__image text-center text-lg-start mb-4 mb-lg-0">
-                  <img class="" src="./images/consultation-with-a-dentist.png" alt="consultation-with-a-dentist">
+                  <img class="" src="./images/upload-patient-documents.png" alt="consultation-with-a-dentist">
                 </div>
               </div>
               <div class="col-12 col-lg-6">
