--- a/index.html
+++ b/index.html
@@ -254,7 +254,31 @@
           </div>
         </div>
       </div>
+    </section>
 
+    <section class="what-is-included">
+      <h2 class="primary-text text-center what-is-included__title mb-5">What is included</h2>
+      <div class="container">
+        <div class="row">
+
+
+          <div class="col-12 col-lg-6 mb-5">
+            <div class="card px-5 py-2">
+              <img src="../images/what-is-included.png" alt="what-is-included">
+              <h4 class="card__title primary-text text-center fw-bold">Over Crowded</h4>
+              <p class="card__description text-center">Occurs when there is insufficient room to fit all teeth leading to plaque accumilation</p>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-6 mb-5">
+            <div class="card px-5 py-2">
+              <img src="../images/what-is-included.png" alt="what-is-included">
+              <h4 class="card__title primary-text text-center fw-bold">Open Bites</h4>
+              <p class="card__description text-center">Occurs when there is excessive space between upper and lower front teeth</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="our-workflow">
